--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ dist: xenial
 
 services:
   - mysql
-  - postgresql
   - xvfb
 
 cache:
@@ -39,10 +38,10 @@ php:
 
 jobs:
   fast_finish: true
-  include:
-    - env: NPM_TEST=1 RELEASE=1
-      language: node_js
-      node_js: 10
+#  include:
+#    - env: NPM_TEST=1 RELEASE=1
+#      language: node_js
+#      node_js: 10
 
 before_script:
 # Init PHP
@@ -62,7 +61,7 @@ before_script:
   - if [[ $BEHAT_TEST == cms ]]; then composer require silverstripe/recipe-cms:$RECIPE_VERSION --no-update; fi
 
   - composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
-  - composer show -i | awk '{ print "composer show "$1" -vv;" }'
+  - composer show -i | awk '{ print "composer show "$1" -vv;" }' | sh
 
 # Install NPM dependencies
   - if [[ $NPM_TEST ]]; then nvm install && npm install -g yarn && yarn install --network-concurrency 1; fi
