--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ before_script:
 # Install composer
   - composer validate
   - composer require --no-update silverstripe/framework silverstripe/versioned silverstripe/vendor-plugin
-  - composer require silverstripe/recipe-testing:^1 silverstripe/recipe-core:$RECIPE_VERSION --no-update
+  - composer require silverstripe/recipe-testing silverstripe/recipe-core:$RECIPE_VERSION --no-update
   - if [[ $DB == PGSQL ]]; then composer require silverstripe/postgresql:2.x-dev --no-update; fi
   - if [[ $DB == SQLITE ]]; then composer require silverstripe/sqlite3:2.x-dev --no-update; fi
   - if [[ $PHPCS_TEST ]]; then composer global require squizlabs/php_codesniffer:^3 --prefer-dist --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile; fi
