--- a/.travis.yml
+++ b/.travis.yml
@@ -24,15 +24,12 @@ env:
     - SS_BASE_URL="http://localhost:8080/"
     - SS_ENVIRONMENT_TYPE="dev"
   jobs:
-    # 5.x-dev
-    - PHPCS_TEST=1 PHPUNIT_TEST=1 BEHAT_TEST=admin RECIPE_VERSION=5.x-dev
-    - PHPCS_TEST=1 PHPUNIT_TEST=1 BEHAT_TEST=cms RECIPE_VERSION=5.x-dev
-    # 4.5.x-dev
-    - PHPCS_TEST=1 PHPUNIT_TEST=1 BEHAT_TEST=admin RECIPE_VERSION=4.5.x-dev
-    - PHPCS_TEST=1 PHPUNIT_TEST=1 BEHAT_TEST=cms RECIPE_VERSION=4.5.x-dev
-    # 4.x-dev
-    - PHPCS_TEST=1 PHPUNIT_TEST=1 BEHAT_TEST=admin RECIPE_VERSION=4.x-dev
-    - PHPCS_TEST=1 PHPUNIT_TEST=1 BEHAT_TEST=cms RECIPE_VERSION=4.x-dev
+    # 2.x-dev
+    - PHPCS_TEST=1 PHPUNIT_TEST=1 BEHAT_TEST=admin RECIPE_VERSION=2.x-dev
+    - PHPCS_TEST=1 PHPUNIT_TEST=1 BEHAT_TEST=cms RECIPE_VERSION=2.x-dev
+    # 1.x-dev
+    - PHPCS_TEST=1 PHPUNIT_TEST=1 BEHAT_TEST=admin RECIPE_VERSION=1.x-dev
+    - PHPCS_TEST=1 PHPUNIT_TEST=1 BEHAT_TEST=cms RECIPE_VERSION=1.x-dev
 
 # Currently Supported Versions of PHP; https://www.php.net/supported-versions.php
 php:
@@ -59,11 +56,11 @@ before_script:
 # Install composer
   - composer validate
   - composer require --no-update silverstripe/framework silverstripe/versioned silverstripe/vendor-plugin
-  - composer require silverstripe/recipe-testing silverstripe/recipe-core:$RECIPE_VERSION --no-update
+  - composer require silverstripe/recipe-testing:$RECIPE_VERSION --no-update
   - if [[ $DB == PGSQL ]]; then composer require silverstripe/postgresql:2.x-dev --no-update; fi
   - if [[ $DB == SQLITE ]]; then composer require silverstripe/sqlite3:2.x-dev --no-update; fi
   - if [[ $PHPCS_TEST ]]; then composer global require squizlabs/php_codesniffer:^3 --prefer-dist --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile; fi
-  - if [[ $BEHAT_TEST == cms ]]; then composer require silverstripe/recipe-cms:$RECIPE_VERSION --no-update; fi
+  - if [[ $BEHAT_TEST == cms ]]; then composer require silverstripe/recipe-cms --no-update; fi
 
   - composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
   - composer show -i | awk '{ print "composer show "$1" -vv;" }' | sh
