--- a/.travis.yml
+++ b/.travis.yml
@@ -30,28 +30,28 @@ matrix:
   include:
     - php: 7.1
       env: DB=PGSQL PHPUNIT_TEST=1
-    - php: 7.2
-      env: DB=MYSQL PHPUNIT_TEST=1 PHPCS_TEST=1
-    - php: 7.3
-      env: DB=MYSQL PHPUNIT_TEST=1
-    - php: 7.4
-      env: DB=MYSQL PHPUNIT_TEST=1
-    - php: 7.1
-      env: DB=MYSQL PHPUNIT_TEST=1 PDO=1
-    - php: 7.2
-      env: DB=MYSQL PHPUNIT_TEST=1
-    - php: 7.3
-      env:
-        - NPM_TEST=1
-        - RELEASE=1
-    - php: 7.1
-      env:
-       - DB=MYSQL
-       - BEHAT_TEST=admin
-    - php: 7.2
-      env:
-       - DB=MYSQL
-       - BEHAT_TEST=cms
+#    - php: 7.2
+#      env: DB=MYSQL PHPUNIT_TEST=1 PHPCS_TEST=1
+#    - php: 7.3
+#      env: DB=MYSQL PHPUNIT_TEST=1
+#    - php: 7.4
+#      env: DB=MYSQL PHPUNIT_TEST=1
+#    - php: 7.1
+#      env: DB=MYSQL PHPUNIT_TEST=1 PDO=1
+#    - php: 7.2
+#      env: DB=MYSQL PHPUNIT_TEST=1
+#    - php: 7.3
+#      env:
+#        - NPM_TEST=1
+#        - RELEASE=1
+#    - php: 7.1
+#      env:
+#       - DB=MYSQL
+#       - BEHAT_TEST=admin
+#    - php: 7.2
+#      env:
+#       - DB=MYSQL
+#       - BEHAT_TEST=cms
 
 before_script:
 # Init PHP
